syntax = "proto3";

package pb; 

import "user.proto";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kenmobility/grpc-project/pb";

message Order {
    string order_id = 1;
    User user = 2;
    string status = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateOrderRequest {
    string user_id = 1;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}